samples/_failures_safe/1761179879_0199c1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6eb1445c.c: In function ‘main’:
./samples/SAFE/__tmp_6eb1445c.c:151:28: error: missing terminating " character
  151 |                     printf("Matrix A + B
      |                            ^~~~~~~~~~~~~
./samples/SAFE/__tmp_6eb1445c.c:151:21: error: expected expression at end of input
  151 |                     printf("Matrix A + B
      |                     ^~~~~~
./samples/SAFE/__tmp_6eb1445c.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6eb1445c.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6eb1445c.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6eb1445c.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_6eb1445c.c:151:21: error: expected declaration or statement at end of input
